force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <description>Represents an employee record automatically created when an Onboarding Request is marked as Completed. Contains the core profile of the new hire after onboarding is finished.</description>
    <label>Employee</label>
    <nameField>
        <displayFormat>EMP-{0000}</displayFormat>
        <label>Employee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>