force-app/main/default/objects/Employee__c/fields/Onboarding_Request__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Request</label>
    <referenceTo>Onboarding_Request__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>