force-app/main/default/objects/Employee__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Direct Reports (Employee)</relationshipLabel>
    <relationshipName>Employee_Direct_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>