force-app/main/default/objects/Employee__c/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Employment_Type__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Department__c</columns>
    <columns>Location__c</columns>
    <columns>Onboarding_Request__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>